<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Z2M</string>
    <string name="font" tools:ignore="ReferenceType">@font/nirmala_b</string>
    <string name="font2" tools:ignore="ReferenceType">@font/showg</string>
    <string name="font3" tools:ignore="ReferenceType">@font/stcaiyun</string>
    <string name="equation">0</string>
    <string name="reponse1">0</string>
    <string name="reponse2">0</string>
    <string name="reponse3">0</string>
    <string name="timer">0</string>
    <string name="ok_enigme">OK</string>
    <string name="reponse_enigme">Réponse</string>
    <string name="solution_enigme">Solution</string>
    <string name="no_sound">0f</string>
    <string name="sound_on">1f</string>
    <string name="sound_0.2">0.2f</string>

</resources>