<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bg_math_quizz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_quizz_facile"
    android:theme="@style/Theme2"
    tools:context=".MathemaQuizzActivity">

    <ImageView
        android:id="@+id/second_game_back2"
        android:layout_width="@dimen/wight_backbutton"
        android:layout_height="@dimen/height_backbutton"
        android:layout_marginTop="44dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/nuage_enigme"
        android:layout_width="365dp"
        android:layout_height="223dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405"
        app:srcCompat="@drawable/grosnuage" />

    <TextView
        android:id="@+id/equation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/font"
        android:text="@string/equation"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/nuage_enigme"
        app:layout_constraintEnd_toEndOf="@+id/nuage_enigme"
        app:layout_constraintStart_toStartOf="@+id/nuage_enigme"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.77" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.Material.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:layout_marginTop="16dp"
        android:max="30"
        android:progress="20"
        android:progressDrawable="@drawable/cusotm_progress_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@string/font"
        android:text="@string/timer"
        android:textAlignment="center"
        android:textColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score"
        android:layout_width="87dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@string/font2"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ScoreImg" />

    <ImageView
        android:id="@+id/ScoreImg"
        android:layout_width="172dp"
        android:layout_height="82dp"
        android:layout_marginTop="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/score" />

    <TableLayout
        android:layout_width="347dp"
        android:layout_height="255dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nuage_enigme"
        app:layout_constraintVertical_bias="0.2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_ans0"
                android:layout_width="175dp"
                android:layout_height="128dp"
                android:background="@drawable/nuage3"
                android:fontFamily="@string/font"
                android:text="Button"
                android:textAlignment="center"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btn_ans1"
                android:layout_width="175dp"
                android:layout_height="128dp"
                android:background="@drawable/nuage3"
                android:fontFamily="@string/font"
                android:text="Button"
                android:textAlignment="center"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="123dp">

            <Button
                android:id="@+id/btn_ans2"
                android:layout_width="175dp"
                android:layout_height="128dp"
                android:background="@drawable/nuage2"
                android:fontFamily="@string/font"
                android:text="Button"
                android:textAlignment="center"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btn_ans3"
                android:layout_width="175dp"
                android:layout_height="128dp"
                android:background="@drawable/nuage4"
                android:fontFamily="@string/font"
                android:text="Button"
                android:textAlignment="center"
                android:textSize="34sp" />

        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>